crates/bevy_ecs/compile_fail/tests/ui/non_unit_without_default_required_components.rs
use bevy_ecs::prelude::*;

#[derive(Component)]
struct A {
    bad: i32,
}

//~v E0080
#[derive(Component)]
#[require(A)]
struct B;
